# SpatialAnalysisCourse

./: README.md  pyproject.toml
python_foundation/: 00_hello_world.ipynb  01_variables.ipynb  02_data_structures.ipynb  03_string_operations.ipynb  04_loops_and_conditionals.ipynb  05_functions.ipynb  06_standard_library.ipynb  07_third_party_modules.ipynb  08_using_web_apis.ipynb
