[tool.poetry]
name = "spatialanalysiscourse"
version = "0.1.0"
description = "Project about learning Spatial Analysis Tools"
authors = ["Leonardo Galler <leonardo.galler@l2-analytics.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.0.1"
geopy = "^2.4.1"
rasterio = "^1.4.3"
matplotlib = "^3.10.0"
jupyterlab = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
